--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A simple RAG system using keyword matching and local AI models"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
-    {name = "Alex Dimmock"}
+    {name = "Alex Dimmock", email = "your-email@example.com"}
 ]
 keywords = ["rag", "ai", "chatbot", "retrieval", "ollama"]
 classifiers = [
@@ -23,6 +23,8 @@ classifiers = [
 
 dependencies = [
     "requests>=2.31.0",
+    "flask>=2.3.0",
+    "ruff>=0.11.13",
 ]
 
 [project.optional-dependencies]
@@ -32,12 +34,27 @@ dev = [
     "ruff>=0.1.0",
 ]
 
+[project.urls]
+Homepage = "https://github.com/yourusername/simple-rag"
+Repository = "https://github.com/yourusername/simple-rag"
+Issues = "https://github.com/yourusername/simple-rag/issues"
+
 [project.scripts]
 simple-rag = "simple_rag.main:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/simple_rag"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/data",
+    "/README.md",
+]
 
 [tool.black]
 line-length = 88
@@ -65,16 +82,3 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-
-[dependency-groups]
-dev = [
-    "black>=24.8.0",
-    "pytest>=8.3.5",
-    "ruff>=0.11.13",
-]
-
-[tool.setuptools.packages.find]
-where = ["src"]
-
-[tool.setuptools.package-dir]
-"" = "src"
